--- a/tb_genta.html
+++ b/tb_genta.html
@@ -58,7 +58,7 @@
          <figcaption>Genta &amp; Ikko (2010 photo)</figcaption>
       </figure>
       
-      <p><a href="tb_komatsu.html">Return to the Komatsu Home Page</a></p>
+      <p><a href="index.html">Return to the Komatsu Home Page</a></p>
       
    </article>   
  
